src/styles/components/_projPanel.scss
.projRow {
  width: 100%;
  display: flex;
  justify-content: center;

  //----------------------- MEDIA QUERIES -----------------------//
  @include lg {
    display: flex;
    justify-content: flex-end;

    &--visible {
      &:nth-of-type(even) {
        justify-content: flex-start;
      }
    }
  }

  &:not(:last-child) {
    margin-bottom: 7rem;

    @include lg {
      margin-bottom: 10rem;
    }
  }

  &--hidden {
    display: none;
  }

  .projPanel {
    position: relative;
    margin: 0;
    padding: 0;
    z-index: 100;

    //Mobile only
    .projJScontainer {
      width: calc(100% - 2rem);
      position: absolute;
      bottom: 0;
      margin: 0 1rem;
      will-change: transform;

      @include xl {
        margin: 0;
        position: static;
        bottom: auto;
        will-change: auto;
      }
    }

    h2.projLabel {
      font-size: 3em;

      @include md {
      }

      //-- MQ
      @include xl {
        position: absolute;
        bottom: 0;
        left: 1rem;
        left: -4rem;
        font-size: 4em;
        will-change: transform;
      }

      margin: 0;
      z-index: 150;
      color: _colour(white); /* TODO: wrap */
    }

    &:hover:not(.inDevelopment) {
      h2::after {
        width: calc(100% + 6rem);
      }
      img {
        box-shadow: 5px 5px 20px _colour(shadow);
        transform: scale(1.02);
        filter: brightness(100%);
      }
    }

    @include xl {
      h2::after {
        content: "";
        position: absolute;
        background-color: _colour(blue);
        left: -3rem;
        top: -0.6rem;
        width: 0%;
        height: calc(100% + 1.2rem);
        z-index: -1;
        transition: _duration(default);
        box-shadow: 5px 5px 20px _colour(shadow);
      }
    }

    img {
      filter: brightness(55%);
      aspect-ratio: 4 / 3;

      @include xl {
        filter: brightness(70%);
      }

      transition: _duration(default);
      box-shadow: 5px 5px 20px _colour(shadow_light);

      max-width: 100%;
      width: 800px;
      @include lg {
        height: 600px;
      }

      &::after {
        content: "view more";
        position: absolute;
        top: 0;
        right: 0;
        width: 5rem;
        height: 5rem;
      }

      //________________________________________________ In Development
      &.inDevelopment {
        filter: brightness(40%) contrast(70%);
      }
    }

    .inDevelopmentText {
      position: absolute;
      top: 50%;
      left: 50%;
      transform: translate(-50%, -50%);

      text-align: center;

      color: _colour(white);
      font-family: _font(family-alt);
      font-weight: _font(weight-bold);

      padding: 1.5rem;

      white-space: nowrap;

      background-color: rgba(black, 0.4);
      backdrop-filter: blur(10px);

      font-size: 2em;
    }

    &.inDevelopment {
      h2,
      h3 {
        color: #888 !important;
      }
    }

    h3 {
      margin: 0;
      margin-top: 0.5rem;
      margin-left: 3rem;
      font-weight: normal;

      //-- MQ
      @include xl {
        float: none;
        position: absolute;
        left: -3rem;
        top: 0;
        margin: 0;
        transform: rotate(270deg) translate(-100%, 0);
        transform-origin: 0 0;

        font-weight: _font(weight-light);
      }
    }
  }
}

